@@ -235,7 +235,8 @@ enum text_object_type {
 	OBJ_nodename,
 	OBJ_nvidia,
 	OBJ_pre_exec,
-	OBJ_pid,
+	OBJ_pid_cmdline,
+	OBJ_pid_cwd,
 	OBJ_processes,
 	OBJ_running_processes,
 	OBJ_shadecolor,
