@@ -1,5 +1,6 @@
 2009-11-11
-	* Added support for $pid
+	* Added support for $pid_cmdline
+	* Added support for $pid_cwd
 
 2009-11-10
 	* Fix $if_mpd_playing and $mpd_percent when you stop playing a song,
